# pokemon-mmo

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  findings.md  package.json  rust-toolchain.toml  warnings.md
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/agents/: desync-guard.md  judge.md  planner.md  reducer-security-auditor.md  researcher.md  reviewer.md
.claude/commands/: doc-keeper.md  red-team.md  tester.md  verifier.md
.claude/skills/: game-core-testing.md  spacetimedb-reducer.md  wasm-boundary.md
.github/workflows/: ci.yml
client-wasm/: Cargo.toml
client-wasm/src/: lib.rs
docs/: README.md  context-hygiene.md  data-model.md  frontend.md  game-systems.md  known-issues.md  reducers.md  routing.md  workflow-loops.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tutorial.html  vite.config.ts
frontend/e2e/: global-setup.ts  tsconfig.json  two-window.spec.ts
frontend/scripts/: gen-spritesheet.mjs
frontend/src/: convert.test.ts  convert.ts  main.ts  monster.ts  wasm.ts
frontend/src/assets/: character.json
frontend/src/input/: input.ts
frontend/src/module_bindings/: attempt_recruit_reducer.ts  battle_action_table.ts  battle_challenge_table.ts  battle_table.ts  care_for_monster_reducer.ts  character_table.ts  clear_queue_reducer.ts  config_table.ts  confirm_trade_reducer.ts  enqueue_move_reducer.ts  evolve_monster_reducer.ts  fuse_monsters_reducer.ts  fusion_table.ts  index.ts  invite_to_raid_reducer.ts  item_table.ts  monster_table.ts  npc_table.ts  offer_trade_reducer.ts  player_item_table.ts  player_table.ts  profile_table.ts  rename_monster_reducer.ts  respond_trade_reducer.ts  set_party_slot_reducer.ts  skill_table.ts  species_table.ts  submit_action_reducer.ts  swap_active_reducer.ts  trade_offer_table.ts  train_monster_reducer.ts  type_relation_table.ts  types.ts
frontend/src/net/: connection.test.ts  connection.ts  store.test.ts  store.ts
frontend/src/prediction/: predictor.test.ts  predictor.ts
frontend/src/render/: characterView.ts  scene.ts  tilemap.ts
frontend/src/test/: introspect.ts
frontend/src/tutorial/: content.test.ts  (+3 more)
game-core/: Cargo.toml
game-core/content/: affinity_chart.ron  encounters.ron  fusions.ron  items.ron  skills.ron  species.ron
game-core/src/: lib.rs  map.rs  movement.rs  npc.rs  types.rs
game-core/src/combat/: damage.rs  mod.rs  model.rs  rating.rs  resolve.rs
game-core/src/content/: mod.rs
game-core/src/monster/: derive.rs  evolve.rs  fuse.rs  mod.rs  model.rs  raise.rs
game-core/src/taming/: encounter.rs  item.rs  mod.rs  recruit.rs
game-core/src/world/: map.rs  mod.rs  movement.rs  npc.rs
game-core/tests/: parity.rs
server-module/: Cargo.toml
server-module/src/: lib.rs
standards/: adr-process.md  ci-cd.md  contracts.md  evals.md  git.md  observability.md  principles.md  security.md  spec-driven.md  testing-tdd.md
standards/domain/: arduino.md  desktop.md  finance.md  game.md  library.md  microservice.md  realtime-chat.md  web-app.md
standards/language/: node-ts.md  python.md  react.md  rust.md
(+24 files in other folders)
