[workspace]
members = ["game-core", "client-wasm", "server-module"]
resolver = "2"

[workspace.dependencies]
# Shared versions — crates opt-in with `workspace = true`
serde = { version = "1", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
# Matches the installed `spacetime` CLI 2.6.0. game-core depends on this ONLY behind its
# optional `spacetimedb` feature (for SpacetimeType derives); server-module uses it directly.
spacetimedb = "1.12"
