[package]
name = "client-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
game-core = { path = "../game-core" }
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1", optional = true }
serde-wasm-bindgen = "0.6"

[features]
default = ["console_error_panic_hook"]
