[package]
name = "server-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable game-core's `spacetimedb` feature so the shared types (Direction, ActionState,
# MoveInput) carry their SpacetimeType derives for use as columns / reducer arguments.
game-core = { path = "../game-core", features = ["spacetimedb"] }
spacetimedb = { workspace = true }
