[package]
name = "server-module"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Enable game-core's `spacetimedb` feature so the shared types (Direction, ActionState,
# MoveInput) carry their SpacetimeType derives for use as columns / reducer arguments.
game-core = { path = "../game-core", features = ["spacetimedb"] }
# `unstable` enables Row-Level Security (client_visibility_filter / Filter) — experimental in 2.6,
# used to scope `monster` rows to their owner so hidden genes never reach other clients.
spacetimedb = { workspace = true, features = ["unstable"] }
